--- a/mm_explore.ipynb
+++ b/mm_explore.ipynb
@@ -38,6 +38,433 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "683ec6a2-1847-422a-888a-7d7f08412422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fb810992-ece5-4bc7-8ef7-f789067114c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import NY Data\n",
+    "df = pd.read_csv(\"https://data.cityofnewyork.us/resource/wvxf-dwi5.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6131b4e2-dc10-40db-8acb-6314c474fe3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>violationid</th>\n",
+       "      <th>buildingid</th>\n",
+       "      <th>registrationid</th>\n",
+       "      <th>boroid</th>\n",
+       "      <th>boro</th>\n",
+       "      <th>housenumber</th>\n",
+       "      <th>lowhousenumber</th>\n",
+       "      <th>highhousenumber</th>\n",
+       "      <th>streetname</th>\n",
+       "      <th>streetcode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>violationstatus</th>\n",
+       "      <th>rentimpairing</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>communityboard</th>\n",
+       "      <th>councildistrict</th>\n",
+       "      <th>censustract</th>\n",
+       "      <th>bin</th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>nta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10081311</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10299683</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10299685</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10299686</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10299690</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>12323291</td>\n",
+       "      <td>811186</td>\n",
+       "      <td>421091</td>\n",
+       "      <td>4</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>120</td>\n",
+       "      <td>120</td>\n",
+       "      <td>120</td>\n",
+       "      <td>BEACH 19 STREET</td>\n",
+       "      <td>30190</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>40.593572</td>\n",
+       "      <td>-73.753179</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>101004.0</td>\n",
+       "      <td>4436179.0</td>\n",
+       "      <td>4.156380e+09</td>\n",
+       "      <td>Far Rockaway-Bayswater</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>12323292</td>\n",
+       "      <td>811186</td>\n",
+       "      <td>421091</td>\n",
+       "      <td>4</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>120</td>\n",
+       "      <td>120</td>\n",
+       "      <td>120</td>\n",
+       "      <td>BEACH 19 STREET</td>\n",
+       "      <td>30190</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>40.593572</td>\n",
+       "      <td>-73.753179</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>101004.0</td>\n",
+       "      <td>4436179.0</td>\n",
+       "      <td>4.156380e+09</td>\n",
+       "      <td>Far Rockaway-Bayswater</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>10645742</td>\n",
+       "      <td>225496</td>\n",
+       "      <td>377316</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>167</td>\n",
+       "      <td>CONOVER STREET</td>\n",
+       "      <td>29030</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>40.678609</td>\n",
+       "      <td>-74.013614</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>5301.0</td>\n",
+       "      <td>3008580.0</td>\n",
+       "      <td>3.005650e+09</td>\n",
+       "      <td>Carroll Gardens-Cobble Hill-Gowanus-Red Hook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>10645743</td>\n",
+       "      <td>225496</td>\n",
+       "      <td>377316</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>151</td>\n",
+       "      <td>151</td>\n",
+       "      <td>167</td>\n",
+       "      <td>CONOVER STREET</td>\n",
+       "      <td>29030</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>40.678609</td>\n",
+       "      <td>-74.013614</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>5301.0</td>\n",
+       "      <td>3008580.0</td>\n",
+       "      <td>3.005650e+09</td>\n",
+       "      <td>Carroll Gardens-Cobble Hill-Gowanus-Red Hook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>10356218</td>\n",
+       "      <td>60797</td>\n",
+       "      <td>200072</td>\n",
+       "      <td>2</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>2567</td>\n",
+       "      <td>2567</td>\n",
+       "      <td>2567</td>\n",
+       "      <td>DECATUR AVENUE</td>\n",
+       "      <td>23920</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>N</td>\n",
+       "      <td>40.862634</td>\n",
+       "      <td>-73.891000</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>39901.0</td>\n",
+       "      <td>2016320.0</td>\n",
+       "      <td>2.032750e+09</td>\n",
+       "      <td>University Heights (North)-Fordham</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     violationid  buildingid  registrationid  boroid      boro housenumber  \\\n",
+       "0       10081311      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "1       10299683      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "2       10299685      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "3       10299686      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "4       10299690      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "..           ...         ...             ...     ...       ...         ...   \n",
+       "995     12323291      811186          421091       4    QUEENS         120   \n",
+       "996     12323292      811186          421091       4    QUEENS         120   \n",
+       "997     10645742      225496          377316       3  BROOKLYN         151   \n",
+       "998     10645743      225496          377316       3  BROOKLYN         151   \n",
+       "999     10356218       60797          200072       2     BRONX        2567   \n",
+       "\n",
+       "    lowhousenumber highhousenumber       streetname  streetcode  ...  \\\n",
+       "0          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "1          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "2          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "3          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "4          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "..             ...             ...              ...         ...  ...   \n",
+       "995            120             120  BEACH 19 STREET       30190  ...   \n",
+       "996            120             120  BEACH 19 STREET       30190  ...   \n",
+       "997            151             167   CONOVER STREET       29030  ...   \n",
+       "998            151             167   CONOVER STREET       29030  ...   \n",
+       "999           2567            2567   DECATUR AVENUE       23920  ...   \n",
+       "\n",
+       "     violationstatus rentimpairing   latitude  longitude  communityboard  \\\n",
+       "0              Close             N        NaN        NaN             NaN   \n",
+       "1              Close             N        NaN        NaN             NaN   \n",
+       "2              Close             N        NaN        NaN             NaN   \n",
+       "3               Open             N        NaN        NaN             NaN   \n",
+       "4               Open             N        NaN        NaN             NaN   \n",
+       "..               ...           ...        ...        ...             ...   \n",
+       "995            Close             N  40.593572 -73.753179            14.0   \n",
+       "996            Close             N  40.593572 -73.753179            14.0   \n",
+       "997            Close             N  40.678609 -74.013614             6.0   \n",
+       "998            Close             N  40.678609 -74.013614             6.0   \n",
+       "999            Close             N  40.862634 -73.891000             7.0   \n",
+       "\n",
+       "    councildistrict censustract        bin           bbl  \\\n",
+       "0               NaN         NaN        NaN           NaN   \n",
+       "1               NaN         NaN        NaN           NaN   \n",
+       "2               NaN         NaN        NaN           NaN   \n",
+       "3               NaN         NaN        NaN           NaN   \n",
+       "4               NaN         NaN        NaN           NaN   \n",
+       "..              ...         ...        ...           ...   \n",
+       "995            31.0    101004.0  4436179.0  4.156380e+09   \n",
+       "996            31.0    101004.0  4436179.0  4.156380e+09   \n",
+       "997            38.0      5301.0  3008580.0  3.005650e+09   \n",
+       "998            38.0      5301.0  3008580.0  3.005650e+09   \n",
+       "999            15.0     39901.0  2016320.0  2.032750e+09   \n",
+       "\n",
+       "                                              nta  \n",
+       "0                                             NaN  \n",
+       "1                                             NaN  \n",
+       "2                                             NaN  \n",
+       "3                                             NaN  \n",
+       "4                                             NaN  \n",
+       "..                                            ...  \n",
+       "995                        Far Rockaway-Bayswater  \n",
+       "996                        Far Rockaway-Bayswater  \n",
+       "997  Carroll Gardens-Cobble Hill-Gowanus-Red Hook  \n",
+       "998  Carroll Gardens-Cobble Hill-Gowanus-Red Hook  \n",
+       "999            University Heights (North)-Fordham  \n",
+       "\n",
+       "[1000 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a937ab3-b6fb-4bf2-81c9-81fe8533751b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
