--- a/mm_explore.ipynb
+++ b/mm_explore.ipynb
@@ -460,8 +460,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1a937ab3-b6fb-4bf2-81c9-81fe8533751b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of      violationid  buildingid  registrationid  boroid      boro housenumber  \\\n",
+       "0       10081311      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "1       10299683      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "2       10299685      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "3       10299686      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "4       10299690      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "..           ...         ...             ...     ...       ...         ...   \n",
+       "995     12323291      811186          421091       4    QUEENS         120   \n",
+       "996     12323292      811186          421091       4    QUEENS         120   \n",
+       "997     10645742      225496          377316       3  BROOKLYN         151   \n",
+       "998     10645743      225496          377316       3  BROOKLYN         151   \n",
+       "999     10356218       60797          200072       2     BRONX        2567   \n",
+       "\n",
+       "    lowhousenumber highhousenumber       streetname  streetcode  ...  \\\n",
+       "0          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "1          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "2          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "3          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "4          22 FRON        22 FRONT     STAGG STREET       80930  ...   \n",
+       "..             ...             ...              ...         ...  ...   \n",
+       "995            120             120  BEACH 19 STREET       30190  ...   \n",
+       "996            120             120  BEACH 19 STREET       30190  ...   \n",
+       "997            151             167   CONOVER STREET       29030  ...   \n",
+       "998            151             167   CONOVER STREET       29030  ...   \n",
+       "999           2567            2567   DECATUR AVENUE       23920  ...   \n",
+       "\n",
+       "     violationstatus rentimpairing   latitude  longitude  communityboard  \\\n",
+       "0              Close             N        NaN        NaN             NaN   \n",
+       "1              Close             N        NaN        NaN             NaN   \n",
+       "2              Close             N        NaN        NaN             NaN   \n",
+       "3               Open             N        NaN        NaN             NaN   \n",
+       "4               Open             N        NaN        NaN             NaN   \n",
+       "..               ...           ...        ...        ...             ...   \n",
+       "995            Close             N  40.593572 -73.753179            14.0   \n",
+       "996            Close             N  40.593572 -73.753179            14.0   \n",
+       "997            Close             N  40.678609 -74.013614             6.0   \n",
+       "998            Close             N  40.678609 -74.013614             6.0   \n",
+       "999            Close             N  40.862634 -73.891000             7.0   \n",
+       "\n",
+       "    councildistrict censustract        bin           bbl  \\\n",
+       "0               NaN         NaN        NaN           NaN   \n",
+       "1               NaN         NaN        NaN           NaN   \n",
+       "2               NaN         NaN        NaN           NaN   \n",
+       "3               NaN         NaN        NaN           NaN   \n",
+       "4               NaN         NaN        NaN           NaN   \n",
+       "..              ...         ...        ...           ...   \n",
+       "995            31.0    101004.0  4436179.0  4.156380e+09   \n",
+       "996            31.0    101004.0  4436179.0  4.156380e+09   \n",
+       "997            38.0      5301.0  3008580.0  3.005650e+09   \n",
+       "998            38.0      5301.0  3008580.0  3.005650e+09   \n",
+       "999            15.0     39901.0  2016320.0  2.032750e+09   \n",
+       "\n",
+       "                                              nta  \n",
+       "0                                             NaN  \n",
+       "1                                             NaN  \n",
+       "2                                             NaN  \n",
+       "3                                             NaN  \n",
+       "4                                             NaN  \n",
+       "..                                            ...  \n",
+       "995                        Far Rockaway-Bayswater  \n",
+       "996                        Far Rockaway-Bayswater  \n",
+       "997  Carroll Gardens-Cobble Hill-Gowanus-Red Hook  \n",
+       "998  Carroll Gardens-Cobble Hill-Gowanus-Red Hook  \n",
+       "999            University Heights (North)-Fordham  \n",
+       "\n",
+       "[1000 rows x 41 columns]>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bca9182a-2cbd-47b3-8961-a67bed15cd50",
    "metadata": {},
    "outputs": [],
    "source": []
