--- a/mm_explore.ipynb
+++ b/mm_explore.ipynb
@@ -38257,22 +38257,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
+   "id": "15038794-7904-4ad1-a719-2b14b3b50d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataJson = {\n",
+    "    'item1':{\n",
+    "        \"0\":60,\n",
+    "        \"1\":60,\n",
+    "        \"2\":60\n",
+    "    },\n",
+    "    'item2':{\n",
+    "        '0':100,\n",
+    "        '1':100,\n",
+    "        '2':100\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "fb810992-ece5-4bc7-8ef7-f789067114c2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dataJson' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#import NY Data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m dfjson \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(dataJson)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dataJson' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import NY Data\n",
     "dfjson = pd.DataFrame(dataJson)"
@@ -38280,12 +38289,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "fe843e53-b26d-45a2-91a2-4ee3a4299a7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>violationid</th>\n",
+       "      <th>buildingid</th>\n",
+       "      <th>registrationid</th>\n",
+       "      <th>boroid</th>\n",
+       "      <th>boro</th>\n",
+       "      <th>housenumber</th>\n",
+       "      <th>lowhousenumber</th>\n",
+       "      <th>highhousenumber</th>\n",
+       "      <th>streetname</th>\n",
+       "      <th>streetcode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>communityboard</th>\n",
+       "      <th>councildistrict</th>\n",
+       "      <th>censustract</th>\n",
+       "      <th>bin</th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>nta</th>\n",
+       "      <th>certifieddate</th>\n",
+       "      <th>newcertifybydate</th>\n",
+       "      <th>newcorrectbydate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10081311</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10299683</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10299685</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10299686</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10299690</td>\n",
+       "      <td>375411</td>\n",
+       "      <td>306067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>22 FRON</td>\n",
+       "      <td>22 FRONT</td>\n",
+       "      <td>STAGG STREET</td>\n",
+       "      <td>80930</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   violationid  buildingid  registrationid  boroid      boro housenumber  \\\n",
+       "0     10081311      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "1     10299683      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "2     10299685      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "3     10299686      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "4     10299690      375411          306067       3  BROOKLYN    22 FRONT   \n",
+       "\n",
+       "  lowhousenumber highhousenumber    streetname  streetcode  ...  longitude  \\\n",
+       "0        22 FRON        22 FRONT  STAGG STREET       80930  ...        NaN   \n",
+       "1        22 FRON        22 FRONT  STAGG STREET       80930  ...        NaN   \n",
+       "2        22 FRON        22 FRONT  STAGG STREET       80930  ...        NaN   \n",
+       "3        22 FRON        22 FRONT  STAGG STREET       80930  ...        NaN   \n",
+       "4        22 FRON        22 FRONT  STAGG STREET       80930  ...        NaN   \n",
+       "\n",
+       "  communityboard councildistrict  censustract  bin bbl  nta certifieddate  \\\n",
+       "0            NaN             NaN          NaN  NaN NaN  NaN           NaN   \n",
+       "1            NaN             NaN          NaN  NaN NaN  NaN           NaN   \n",
+       "2            NaN             NaN          NaN  NaN NaN  NaN           NaN   \n",
+       "3            NaN             NaN          NaN  NaN NaN  NaN           NaN   \n",
+       "4            NaN             NaN          NaN  NaN NaN  NaN           NaN   \n",
+       "\n",
+       "  newcertifybydate newcorrectbydate  \n",
+       "0              NaN              NaN  \n",
+       "1              NaN              NaN  \n",
+       "2              NaN              NaN  \n",
+       "3              NaN              NaN  \n",
+       "4              NaN              NaN  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#read in nationalParks.json\n",
+    "#read in NY data\n",
     "df = pd.read_json('https://data.cityofnewyork.us/resource/wvxf-dwi5.json')\n",
     "df.head()"
    ]
